--- a/sass/components/_index-activity.scss
+++ b/sass/components/_index-activity.scss
@@ -1,6 +1,6 @@
 .activity {
-    padding-top: var(--distance-top-bottom-section);
-    padding-bottom: var(--distance-top-bottom-section);
+    padding: var(--padding-section);
+    display: none;
 }
 
 .activity__text {
