--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,6 +1,9 @@
 .container {
-    width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
     margin: 0 auto;
+
+    @include mobile();
+
+    @include tablet();
+
+    @include desktop();
 }
