--- a/sass/components/_footer-logo.scss
+++ b/sass/components/_footer-logo.scss
@@ -1,5 +1,9 @@
 .footer__logo {
-    min-width: 145px;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+    min-width: 154px;
     color: #ffffff;
     .footer__logo-part {
             color: var(--logo-focus-hover-color);
