--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,11 +1,17 @@
 .footer {
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding: var(--padding-section);
     background: #2f303a;
     .container-footer {
             display: flex;
-            align-items: baseline;
+            flex-direction: column;
+            align-items: center;
+            gap: 60px;
+            // align-items: baseline;
         }
+}
+
+.footer__logo-address {
+    text-align: center;
 }
 
 .address {
@@ -32,10 +38,11 @@
 }
 
 .footer__soc {
-    min-width: 206px;
+    text-align: center;
+    width: 206px;
     height: 80px;
-    margin-left: 70px;
-    margin-right: 93px;
+    // margin-left: 70px;
+    // margin-right: 93px;
     .footer__soc-title {
             font-weight: 700;
             font-size: 14px;
@@ -69,6 +76,14 @@
         }
 }
 
+.footer__form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    width: 100%;
+}
+
 .footer__form-title {
     font-weight: 700;
     font-size: 14px;
@@ -76,13 +91,14 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #ffffff;
-    margin-bottom: 20px;
 }
 
 .footer__form-container {
     display: flex;
-    min-width: 570px;
-    height: 86px;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    width: 100%;
 }
 
 .footer__form-input {
@@ -94,9 +110,8 @@
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
-    width: 358px;
+    width: 100%;
     height: 50px;
-    margin-right: 12px;
     padding: 15px 0px 15px 16px;
 }
 
