--- a/sass/components/_header-logo.scss
+++ b/sass/components/_header-logo.scss
@@ -3,16 +3,18 @@
     font-family: "raleway", sans-serif;
     font-style: normal;
     font-weight: var(--title-logo-font-weight);
-    font-size: 26px;
-    line-height: 1.19;
+    font-size: 24px;
+    line-height: 1.16;
     letter-spacing: 0.03em;
     color: black;
     text-decoration: none;
-    transition: var(--animation-hover-focus);
+    display: block;
+    transition: var(--animation-hover-text);
 }
 
 .logo {
-    margin-right: 93px;
+    padding-top: 16px;
+    padding-bottom: 16px;
 }
 
 .logo__part {
