--- a/sass/components/_header-nav-contact.scss
+++ b/sass/components/_header-nav-contact.scss
@@ -1,25 +1,33 @@
+.navigation {
+    display: none;
+}
+
 .navigation__link {
     color: #212121;
     transition: var(--animation-hover-focus);
 }
 
-.current::after {
-    content: "";
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background: var(--logo-focus-hover-color);
+// .current::after {
+//     content: "";
+//     width: 100%;
+//     height: 4px;
+//     border-radius: 2px;
+//     background: var(--logo-focus-hover-color);
 
-    position: absolute;
-    bottom: -1px;
-    left: 0;
+//     position: absolute;
+//     bottom: -1px;
+//     left: 0;
 
-    pointer-events: none;
-}
+//     pointer-events: none;
+// }
 
 .current {
     padding: 0px 1.5px;
     color: var(--logo-focus-hover-color);
+}
+
+.contact-header {
+    display: none;
 }
 
 .navigation__link,
@@ -32,8 +40,7 @@
 }
 
 .contact-header__link {
-    display: flex;
-    justify-content: center;
+    display: block;
     align-items: center;
     width: 100%;
     color: #757575;
