--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,33 +1,37 @@
 .header {
-    position: relative;
-    border-bottom: 1px solid #ececec;
+    // position: relative;
+    // border-bottom: 1px solid #ececec;
 }
 
 .container-header {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    position: relative;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 .navigation {
-    display: flex;
-    align-items: center;
+    // display: flex;
+    // align-items: center;
 }
 
 .navigation__list,
 .contact-header {
-    display: flex;
-    gap: 50px;
-    margin-left: auto;
+    // display: flex;
+    // gap: 50px;
+    // margin-left: auto;
 }
 
 .navigation__item{
-    position: relative;
-    padding: 32px 0;
+    // position: relative;
+    // padding: 32px 0;
 }
 
 .contact-header__item {
-    display: flex;
-    min-width: 161px;
+    // display: flex;
+    // min-width: 161px;
 }
 
 .header-portfolio {
