--- a/sass/components/_index-hero.scss
+++ b/sass/components/_index-hero.scss
@@ -2,30 +2,33 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    padding: 118px 60px;
 }
 
 .hero {
-    max-width: 1600px;
-    margin: 0 auto;
-    padding: 200px 0;
+    // max-width: 1600px;
+    // padding: 200px 0;
+    @include mobile();
     background-color: #c4c4c4;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4),
-            rgba(47, 48, 58, 0.4)),
-        url(../img/index-hero-bg.jpg);
+        rgba(47, 48, 58, 0.4)),
+        url(/img/Mobile/header-mobile-bg.jpg),
+        url(/img/Mobile/header-mobile-bg-2x.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    flex-grow: 1;
+    margin: 0 auto;
 }
 
 .hero-container__tagline{
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    font-size: 26px;
+    line-height: 1.62;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    color: #ffffff;
-    width: 696px;
     text-align: center;
+    color: #ffffff;
     margin-bottom: 30px;
 }
 
@@ -37,8 +40,8 @@
     color: #ffffff;
     background: var(--logo-focus-hover-color);
     cursor: pointer;
-    min-width: 216px;
-    height: 50px;
+    min-width: 200px;
+    padding: 10px 24px;
     border: 0px;
     border-radius: 4px;
     letter-spacing: 0.06em;
