--- a/sass/components/_index-peculiarities.scss
+++ b/sass/components/_index-peculiarities.scss
@@ -1,21 +1,25 @@
-.peculiarities {
-    padding-top: var(--distance-top-bottom-section);
-}
+// .peculiarities {
+//     padding: var(--padding-section);
+// }
 
-.container-index-peculiarities {
-    display: flex;
+.container-peculiarities {
+    padding: var(--padding-section);
 }
 
 .peculiarities__list {
-    display: flex;
-    gap: 30px;
+    // display: flex;
+    // gap: 30px;
     .peculiarities__item {
-            width: 270px;
-        }
+        width: 100%;
+        margin-bottom: 30px;
+            &:last-child {
+                margin-bottom: 0;
+            }
+    }
 }
 
 .peculiarities__icon {
-    width: 270px;
+    width: 100%;
     height: 120px;
     background: #f5f4fa;
     border-radius: 4px;
@@ -30,6 +34,7 @@
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
+    text-align: center;
     text-transform: uppercase;
     color: var(--title-color);
     margin-bottom: 10px;
