--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,10 +3,12 @@
 
 @import './utils/variables';
 @import './utils/hidden';
+@import './utils/mixin';
 
 @import './components/container';
 @import './components/header';
 @import './components/header-logo';
+@import './components/header-mobile-menu';
 @import './components/header-nav-contact';
 @import './components/index-hero';
 @import './components/index-peculiarities';
