--- a/sass/components/_index-hero.scss
+++ b/sass/components/_index-hero.scss
@@ -12,8 +12,8 @@
     background-color: #c4c4c4;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)),
-        url(/img/Mobile/header-mobile-bg.jpg),
-        url(/img/Mobile/header-mobile-bg-2x.jpg);
+        url(./img/Mobile/header-mobile-bg.jpg),
+        url(./img/Mobile/header-mobile-bg-2x.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
