--- a/sass/components/_index-hero.scss
+++ b/sass/components/_index-hero.scss
@@ -10,6 +10,7 @@
     // padding: 200px 0;
     @include mobile();
     background-color: #c4c4c4;
+    content: "";
     background-image: linear-gradient(rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)),
         url(./img/Mobile/header-mobile-bg.jpg),
