add mobile menu, add mob modal

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -19,9 +19,10 @@
 
 .navigation__list,
 .contact-header {
-    // display: flex;
-    // gap: 50px;
-    // margin-left: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    margin-left: auto;
 }
 
 .navigation__item{
