--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,14 @@ img {
   padding-right: 15px;
 }
 
+.navigation__list,
+.contact-header {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  margin-left: auto;
+}
+
 .header-portfolio {
   border-bottom: 1px solid #ececec;
 }
@@ -133,7 +141,7 @@ img {
   color: var(--logo-focus-hover-color);
 }
 
-.menu-toggle {
+.menu-open-btn {
   display: block;
   margin: 0;
   padding: 0;
@@ -141,8 +149,38 @@ img {
   background-color: transparent;
 }
 
-.navigation {
-  display: none;
+.mob-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 40px 48px;
+  background: #ffffff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+}
+.mob-menu .container-mob-menu {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+  overflow: auto;
+}
+
+.menu-close-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  display: block;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  fill: #212121;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-close-btn:hover, .menu-close-btn:focus {
+  fill: var(--logo-focus-hover-color);
 }
 
 .navigation__link {
@@ -156,21 +194,21 @@ img {
 }
 
 .contact-header {
-  display: none;
+  display: flex;
+  flex-direction: column-reverse;
+  margin-bottom: 64px;
 }
 
-.navigation__link,
-.contact-header__link {
+.navigation__link {
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 40px;
+  line-height: 1.2;
   letter-spacing: 0.02em;
   text-decoration: none;
 }
 
 .contact-header__link {
   display: block;
-  align-items: center;
   width: 100%;
   color: #757575;
   text-decoration: none;
@@ -181,11 +219,51 @@ img {
   fill: currentColor;
 }
 
+.header-email {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+
+.header-tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #2196F3;
+}
+
 .navigation__link:hover,
 .navigation__link:focus,
 .contact-header__link:hover,
 .contact-header__link:focus {
   color: var(--logo-focus-hover-color);
+}
+
+.mob-menu-soc {
+  display: flex;
+}
+
+.mob-menu-soc__item {
+  padding-right: 9px;
+  padding-left: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+.mob-menu-soc__item:first-child {
+  padding-left: 0;
+}
+.mob-menu-soc__item:last-child {
+  border: 0;
+}
+
+.mob-menu-soc__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196F3;
 }
 
 .hero-container {
@@ -623,6 +701,7 @@ img {
   top: 0;
   width: 100%;
   height: 100%;
+  padding: 93px 15px;
   background: rgba(0, 0, 0, 0.2);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -631,8 +710,9 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 528px;
-  min-height: 581px;
+  width: 450px;
+  min-height: 609px;
+  padding: 40px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -654,7 +734,6 @@ img {
   cursor: pointer;
   width: 30px;
   height: 30px;
-  padding: 0;
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
@@ -668,16 +747,13 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.modal-form-container {
-  margin: 40px 40px 30px 40px;
+  gap: 30px;
 }
 
 .modal-form__title {
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
@@ -701,7 +777,7 @@ img {
 }
 .modal-form__box .modal-form__input {
   display: inline-block;
-  width: 448px;
+  width: 100%;
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -739,8 +815,8 @@ img {
 .modal-form__checkbox {
   position: relative;
   display: inline-block;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   color: #757575;
   padding-left: 36px;
@@ -749,13 +825,11 @@ img {
   position: absolute;
   top: 0;
   left: 0;
-  align-items: center;
   width: 16px;
   height: 15px;
   border: 2px solid #212121;
   border-radius: 4px;
   margin-left: 12px;
-  transform: translateY(25%);
   transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
