--- a/sass/components/_header-mobile-menu.scss
+++ b/sass/components/_header-mobile-menu.scss
@@ -1,4 +1,4 @@
-.menu-toggle {
+.menu-open-btn {
     display: block;
     margin: 0;
     padding: 0;
@@ -6,9 +6,39 @@
     background-color: transparent;
 }
 
-// .js-menu-container {
-//     position: fixed;
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-// }
+.mob-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    padding: 40px 48px;
+    background: #ffffff;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
+    0px 1px 3px rgba(0, 0, 0, 0.16);
+        .container-mob-menu {
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+            justify-content: space-between;
+            overflow: auto;
+        }
+}
+
+.menu-close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    display: block;
+    margin: 0;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    fill: #212121;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+            fill: var(--logo-focus-hover-color);
+        }
+}
+
