--- a/sass/components/_header-nav-contact.scss
+++ b/sass/components/_header-nav-contact.scss
@@ -1,7 +1,3 @@
-.navigation {
-    display: none;
-}
-
 .navigation__link {
     color: #212121;
     transition: var(--animation-hover-focus);
@@ -27,21 +23,22 @@
 }
 
 .contact-header {
-    display: none;
+    display: flex;
+    flex-direction: column-reverse;
+    margin-bottom: 64px;
 }
 
-.navigation__link,
-.contact-header__link {
+.navigation__link {
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    font-size: 40px;
+    line-height: 1.2;
     letter-spacing: 0.02em;
     text-decoration: none;
 }
 
 .contact-header__link {
     display: block;
-    align-items: center;
+    // align-items: center;
     width: 100%;
     color: #757575;
     text-decoration: none;
@@ -52,9 +49,49 @@
         }
 }
 
+.header-email {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+    color: #757575;
+}
+
+.header-tel {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: #2196F3;
+}
+
 .navigation__link:hover,
 .navigation__link:focus,
 .contact-header__link:hover,
 .contact-header__link:focus {
     color: var(--logo-focus-hover-color);
+}
+
+.mob-menu-soc {
+    display: flex;
+}
+
+.mob-menu-soc__item {
+    padding-right: 9px;
+    padding-left: 10px;
+        &:first-child {
+            padding-left: 0;
+    }
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+        &:last-child {
+            border: 0;
+        }
+}
+
+.mob-menu-soc__link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: #2196F3;
 }
