--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -3,6 +3,7 @@
     top: 0;
     width: 100%;
     height: 100%;
+    padding: 93px 15px;
     background: rgba(0, 0, 0, 0.2);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
         visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -12,8 +13,10 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 528px;
-    min-height: 581px;
+    width: 450px;
+    min-height: 609px;
+    // margin: 93px 15px;
+    padding: 40px;
     background: #ffffff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -36,7 +39,6 @@
     cursor: pointer;
     width: 30px;
     height: 30px;
-    padding: 0;
     background: #ffffff;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
@@ -53,16 +55,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.modal-form-container {
-    margin: 40px 40px 30px 40px;
+    gap: 30px;
 }
 
 .modal-form__title {
     font-weight: 700;
     font-size: 20px;
-    line-height: 1.15;
+    line-height: 1.50;
     text-align: center;
     letter-spacing: 0.03em;
     color: #212121;
@@ -85,7 +84,7 @@
     margin-top: 4px;
     .modal-form__input {
             display: inline-block;
-            width: 448px;
+            width: 100%;
             height: 40px;
             border: 1px solid rgba(33, 33, 33, 0.2);
             border-radius: 4px;
@@ -124,8 +123,8 @@
 .modal-form__checkbox {
     position: relative;
     display: inline-block;
-    font-size: 14px;
-    line-height: 1.71;
+    font-size: 12px;
+    line-height: 1.16;
     letter-spacing: 0.03em;
     color: #757575;
     padding-left: 36px;
@@ -133,13 +132,12 @@
             position: absolute;
             top: 0;
             left: 0;
-            align-items: center;
             width: 16px;
             height: 15px;
             border: 2px solid #212121;
             border-radius: 4px;
             margin-left: 12px;
-            transform: translateY(25%);
+            // transform: translateY(25%);
             transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1),
                 background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
                 border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
