--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import './components/header';
 @import './components/header-logo';
 @import './components/header-mobile-menu';
+@import './components/header-tablet-menu';
 @import './components/header-nav-contact';
 @import './components/index-hero';
 @import './components/index-peculiarities';
