--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,10 @@ img {
   background: var(--main-body-color);
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 :root {
   --main-body-color: #ffffff;
   --logo-focus-hover-color: #2196f3;
@@ -93,13 +97,31 @@ img {
   }
 }
 
+.header {
+  position: relative;
+  border-bottom: 1px solid #ececec;
+}
+@media screen and (min-width: 768px) {
+  .header {
+    width: 768px;
+  }
+}
+
 .container-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   position: relative;
+  width: 100vw;
   padding-left: 15px;
   padding-right: 15px;
+}
+
+@media screen and (min-width: 768px) {
+  .navigation {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .navigation__list,
@@ -132,6 +154,12 @@ img {
   padding-top: 16px;
   padding-bottom: 16px;
 }
+@media screen and (min-width: 768px) {
+  .logo {
+    padding-top: 26px;
+    padding-bottom: 26px;
+  }
+}
 
 .logo__part {
   color: var(--logo-focus-hover-color);
@@ -147,6 +175,19 @@ img {
   padding: 0;
   border: none;
   background-color: transparent;
+}
+@media screen and (min-width: 768px) {
+  .menu-open-btn {
+    display: none;
+  }
+}
+
+.menu-open-btn__icon {
+  fill: #000000;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.menu-open-btn__icon:hover, .menu-open-btn__icon:focus {
+  fill: var(--logo-focus-hover-color);
 }
 
 .mob-menu {
@@ -186,6 +227,20 @@ img {
 .navigation__link {
   color: #212121;
   transition: var(--animation-hover-focus);
+}
+
+@media screen and (min-width: 768px) {
+  .current::after {
+    content: "";
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background: var(--logo-focus-hover-color);
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    pointer-events: none;
+  }
 }
 
 .current {
@@ -244,6 +299,7 @@ img {
 
 .mob-menu-soc {
   display: flex;
+  width: 100%;
 }
 
 .mob-menu-soc__item {
@@ -264,6 +320,8 @@ img {
   line-height: 1.22;
   letter-spacing: 0.02em;
   color: #2196F3;
+  display: block;
+  width: 100%;
 }
 
 .hero-container {
@@ -707,16 +765,12 @@ img {
 }
 
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 450px;
-  min-height: 609px;
-  padding: 40px;
+  width: 100%;
+  height: 609px;
+  padding: 8px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -725,9 +779,7 @@ img {
 }
 
 .modal__close-btn {
-  position: absolute;
-  top: 8px;
-  right: 8px;
+  margin-left: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -748,6 +800,7 @@ img {
   flex-direction: column;
   align-items: center;
   gap: 30px;
+  padding: 0 32px;
 }
 
 .modal-form__title {
