--- a/sass/components/_header-logo.scss
+++ b/sass/components/_header-logo.scss
@@ -15,6 +15,10 @@
 .logo {
     padding-top: 16px;
     padding-bottom: 16px;
+    @media screen and (min-width: 768px) {
+        padding-top: 26px;
+        padding-bottom: 26px;
+    }
 }
 
 .logo__part {
