--- a/sass/components/_header-mobile-menu.scss
+++ b/sass/components/_header-mobile-menu.scss
@@ -4,6 +4,18 @@
     padding: 0;
     border: none;
     background-color: transparent;
+    @media screen and (min-width: 768px) {
+            display: none;
+        }
+}
+
+.menu-open-btn__icon {
+    fill: #000000;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover,
+        &:focus {
+            fill: var(--logo-focus-hover-color);
+        };
 }
 
 .mob-menu {
