--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,6 +1,7 @@
 .header {
-    // position: relative;
-    // border-bottom: 1px solid #ececec;
+    @include tablet;
+    position: relative;
+    border-bottom: 1px solid #ececec;
 }
 
 .container-header {
@@ -8,13 +9,16 @@
     align-items: center;
     justify-content: space-between;
     position: relative;
+    width: 100vw;
     padding-left: 15px;
     padding-right: 15px;
 }
 
 .navigation {
-    // display: flex;
-    // align-items: center;
+    @media screen and (min-width: 768px) {
+        display: flex;
+        align-items: center;
+    }
 }
 
 .navigation__list,
