--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -10,18 +10,17 @@
 }
 
 .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 450px;
-    min-height: 609px;
-    // margin: 93px 15px;
-    padding: 40px;
+    // position: absolute;
+    // top: 50%;
+    // left: 50%;
+    width: 100%;
+    height: 609px;
+    padding: 8px;
     background: #ffffff;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-    transform: translate(-50%, -50%) scale(1);
+    // transform: translate(-50%, -50%) scale(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -30,9 +29,10 @@
 }
 
 .modal__close-btn {
-    position: absolute;
-    top: 8px;
-    right: 8px;
+    // position: absolute;
+    // top: 8px;
+    // right: 8px;
+    margin-left: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -56,6 +56,7 @@
     flex-direction: column;
     align-items: center;
     gap: 30px;
+    padding: 0 32px;
 }
 
 .modal-form__title {
