--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,17 +1,29 @@
 .footer {
-    padding: var(--padding-section);
     background: #2f303a;
+}
     .container-footer {
             display: flex;
             flex-direction: column;
             align-items: center;
             gap: 60px;
+            padding: var(--padding-section);
             // align-items: baseline;
+            @media screen and (min-width: 768px) {
+                    width: 768px;
+            }
+}
+
+.footer__address-soc {
+    @media screen and (min-width: 768px) {
+            display: flex;
+            flex-direction: row;
+            align-items: baseline;
         }
 }
 
 .footer__logo-address {
     text-align: center;
+
 }
 
 .address {
@@ -43,6 +55,9 @@
     height: 80px;
     // margin-left: 70px;
     // margin-right: 93px;
+    @media screen and (min-width: 768px) {
+        margin-left: 165px;
+    }
     .footer__soc-title {
             font-weight: 700;
             font-size: 14px;
@@ -82,6 +97,9 @@
     align-items: center;
     gap: 20px;
     width: 100%;
+    @media screen and (min-width: 768px) {
+        width: 450px;
+    }
 }
 
 .footer__form-title {
