--- a/sass/components/_header-mobile-menu.scss
+++ b/sass/components/_header-mobile-menu.scss
@@ -28,12 +28,20 @@
     background: #ffffff;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08),
     0px 1px 3px rgba(0, 0, 0, 0.16);
+    @media screen and (min-width: 768px) {
+        position: relative;
+        display: none;
+    }
         .container-mob-menu {
             display: flex;
             flex-direction: column;
             height: 100%;
             justify-content: space-between;
             overflow: auto;
+            @media screen and (min-width: 768px) {
+                    position: relative;
+                    display: none;
+                }
         }
 }
 
