--- a/sass/components/_header-nav-contact.scss
+++ b/sass/components/_header-nav-contact.scss
@@ -1,6 +1,9 @@
 .navigation__link {
     color: #212121;
     transition: var(--animation-hover-focus);
+    @media screen and (min-width: 768px) {
+        position: relative;
+    }
 }
 
 .current::after {
@@ -12,7 +15,7 @@
         background: var(--logo-focus-hover-color);
         
         position: absolute;
-        bottom: -1px;
+        bottom: 0;
         left: 0;
         
         pointer-events: none;
@@ -28,6 +31,11 @@
     display: flex;
     flex-direction: column-reverse;
     margin-bottom: 64px;
+    @media screen and (min-width: 768px) {
+        margin: 0;
+        flex-direction: column;
+        gap: 10px;
+    }
 }
 
 .navigation__link {
@@ -36,6 +44,12 @@
     line-height: 1.2;
     letter-spacing: 0.02em;
     text-decoration: none;
+    @media screen and (min-width: 768px) {
+        font-size: 14px;
+        line-height: 1.14;
+        padding-top: 32px;
+        padding-bottom: 32px;
+    }
 }
 
 .contact-header__link {
@@ -45,8 +59,11 @@
     color: #757575;
     text-decoration: none;
     transition: var(--animation-hover-focus);
+    @media screen and (min-width: 768px) {
+        display: flex;
+    }
     .contact-header__icon {
-            margin-right: 10px;
+            margin-right: 8px;
             fill: currentColor;
         }
 }
@@ -57,6 +74,10 @@
     line-height: 1.16;
     letter-spacing: 0.02em;
     color: #757575;
+    @media screen and (min-width: 768px) {
+        font-size: 12px;
+        line-height: 1.14;
+    }
 }
 
 .header-tel {
@@ -65,6 +86,11 @@
     line-height: 1.17;
     letter-spacing: 0.02em;
     color: #2196F3;
+    @media screen and (min-width: 768px) {
+            font-size: 12px;
+            line-height: 1.14;
+            color: #757575;
+        }
 }
 
 .navigation__link:hover,
