--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,6 +1,4 @@
 .header {
-    @include tablet;
-    position: relative;
     border-bottom: 1px solid #ececec;
 }
 
@@ -10,14 +8,10 @@
     justify-content: space-between;
     position: relative;
     width: 100vw;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-.navigation {
+    padding: 0 15px;
     @media screen and (min-width: 768px) {
-        display: flex;
-        align-items: center;
+        justify-content: center;
+        width: 768px;
     }
 }
 
@@ -27,11 +21,18 @@
     flex-direction: column;
     gap: 32px;
     margin-left: auto;
+    @media screen and (min-width: 768px) {
+        flex-direction: row;
+        margin-left: 87px;
+        margin-right: 96px;
+    }
 }
 
 .navigation__item{
-    // position: relative;
-    // padding: 32px 0;
+    @media screen and (min-width: 768px) {
+        position: relative;
+        padding: 32px 0;
+    }
 }
 
 .contact-header__item {
