--- a/sass/components/_index-hero.scss
+++ b/sass/components/_index-hero.scss
@@ -1,23 +1,33 @@
-.hero-container {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding: 118px 60px;
-}
-
 .hero {
     // max-width: 1600px;
     // padding: 200px 0;
-    @include mobile();
     background-color: #c4c4c4;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)),
+            rgba(47, 48, 58, 0.4)),
         url(../img/Mobile/header-mobile-bg.jpg),
         url(../img/Mobile/header-mobile-bg-2x.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     margin: 0 auto;
+
+    @media screen and (min-width: 768px) {
+        width: 768px;
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)),
+            url(../img/Tablet/header-tablet-bg.jpg),
+            url(../img/Tablet/header-tablet-bg-2x.jpg);
+    }
+}
+
+.hero-container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 118px 60px;
+    @media screen and (min-width: 768px) {
+        padding: 118px 204px;
+    }
 }
 
 .hero-container__tagline{
