--- a/sass/components/_index-team.scss
+++ b/sass/components/_index-team.scss
@@ -1,6 +1,9 @@
 .team {
-    padding: var(--padding-section);
     background: #f5f4fa;
+}
+
+.container-team {
+    padding: var(--padding-section);
 }
 
 .team__tagline {
@@ -18,6 +21,10 @@
     flex-direction: column;
     align-items: center;
     gap: 30px;
+    @media screen and (min-width: 768px) {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
     .team__item {
             width: 100%;
             background: #ffffff;
@@ -27,6 +34,10 @@
     
             &:last-child {
                 margin-right: 0px;
+            }
+
+            @media screen and (min-width: 768px) {
+                width: 354px;
             }
         }
 }
