--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -14,6 +14,10 @@
 }
 
 .footer__address-soc {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 60px;
     @media screen and (min-width: 768px) {
             display: flex;
             flex-direction: row;
