--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -7,6 +7,9 @@
     background: rgba(0, 0, 0, 0.2);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
         visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    @media screen and (min-width: 768px) {
+        padding: 207px 159px;
+    }
 }
 
 .modal {
@@ -21,11 +24,13 @@
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     // transform: translate(-50%, -50%) scale(1);
+    transform: translate(0, 0) scale(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-backdrop.is-hidden .modal {
-    transform: translate(-50%, -50%) scale(0);
+    // transform: translate(-50%, -50%) scale(0);
+    transform: translate(0, 0) scale(0);
 }
 
 .modal__close-btn {
