--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,15 +2,20 @@
     background: #2f303a;
 }
     .container-footer {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 60px;
-            padding: var(--padding-section);
-            // align-items: baseline;
-            @media screen and (min-width: 768px) {
-                    width: 768px;
-            }
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 60px;
+        padding: var(--padding-section);
+        @media screen and (min-width: 768px) {
+            width: 768px;
+        }
+        @media screen and (min-width: 1200px) {
+            width: 1200px;
+            flex-direction: row;
+            align-items: baseline;
+            gap: 0;
+        }
 }
 
 .footer__address-soc {
@@ -23,6 +28,9 @@
             flex-direction: row;
             align-items: baseline;
         }
+        @media screen and (min-width: 1200px) {
+            gap: 0;
+            }
 }
 
 .footer__logo-address {
@@ -57,10 +65,12 @@
     text-align: center;
     width: 206px;
     height: 80px;
-    // margin-left: 70px;
-    // margin-right: 93px;
     @media screen and (min-width: 768px) {
         margin-left: 165px;
+    }
+    @media screen and (min-width: 1200px) {
+        margin-left: 70px;
+        margin-right: 93px;
     }
     .footer__soc-title {
             font-weight: 700;
@@ -104,6 +114,10 @@
     @media screen and (min-width: 768px) {
         width: 450px;
     }
+    @media screen and (min-width: 1200px) {
+        width: 570px;
+        align-items: flex-start;
+    }
 }
 
 .footer__form-title {
@@ -121,6 +135,10 @@
     align-items: center;
     gap: 20px;
     width: 100%;
+    @media screen and (min-width: 1200px) {
+        flex-direction: row;
+        gap: 12px;
+    }
 }
 
 .footer__form-input {
