--- a/sass/components/_header-logo.scss
+++ b/sass/components/_header-logo.scss
@@ -10,6 +10,10 @@
     text-decoration: none;
     display: block;
     transition: var(--animation-hover-text);
+    @media screen and (min-width: 1200px) {
+        font-size: 26px;
+        line-height: 1.19;
+    }
 }
 
 .logo {
@@ -18,6 +22,10 @@
     @media screen and (min-width: 768px) {
         padding-top: 26px;
         padding-bottom: 26px;
+    }
+    @media screen and (min-width: 1200px) {
+        padding-top: 25px;
+        padding-bottom: 25px;
     }
 }
 
