--- a/sass/components/_header-nav-contact.scss
+++ b/sass/components/_header-nav-contact.scss
@@ -27,16 +27,7 @@
     color: var(--logo-focus-hover-color);
 }
 
-.contact-header {
-    display: flex;
-    flex-direction: column-reverse;
-    margin-bottom: 64px;
-    @media screen and (min-width: 768px) {
-        margin: 0;
-        flex-direction: column;
-        gap: 10px;
-    }
-}
+
 
 .navigation__link {
     font-weight: 500;
@@ -54,7 +45,6 @@
 
 .contact-header__link {
     display: block;
-    // align-items: center;
     width: 100%;
     color: #757575;
     text-decoration: none;
@@ -62,8 +52,11 @@
     @media screen and (min-width: 768px) {
         display: flex;
     }
+    @media screen and (min-width: 1200px) {
+        align-items: center;
+        gap: 10px;
+    }
     .contact-header__icon {
-            margin-right: 8px;
             fill: currentColor;
         }
 }
@@ -78,6 +71,10 @@
         font-size: 12px;
         line-height: 1.14;
     }
+    @media screen and (min-width: 1200px) {
+        font-size: 14px;
+        line-height: 1.14;
+    }
 }
 
 .header-tel {
@@ -87,10 +84,14 @@
     letter-spacing: 0.02em;
     color: #2196F3;
     @media screen and (min-width: 768px) {
-            font-size: 12px;
-            line-height: 1.14;
-            color: #757575;
-        }
+        font-size: 12px;
+        line-height: 1.14;
+        color: #757575;
+    }
+    @media screen and (min-width: 1200px) {
+        font-size: 14px;
+        line-height: 1.14;
+    }
 }
 
 .navigation__link:hover,
