--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -13,10 +13,13 @@
         justify-content: center;
         width: 768px;
     }
+    @media screen and (min-width: 1200px) {
+        width: 1200px;
+        justify-content: flex-start;
+    }
 }
 
-.navigation__list,
-.contact-header {
+.navigation__list {
     display: flex;
     flex-direction: column;
     gap: 32px;
@@ -25,6 +28,26 @@
         flex-direction: row;
         margin-left: 87px;
         margin-right: 96px;
+    }
+    @media screen and (min-width: 1200px) {
+        margin-left: 92px;
+        margin-right: 0;
+    }
+}
+
+.contact-header {
+    display: flex;
+    flex-direction: column-reverse;
+    margin-bottom: 64px;
+
+    @media screen and (min-width: 768px) {
+        margin: 0;
+        flex-direction: column;
+        gap: 10px;
+    }
+    @media screen and (min-width: 1200px) {
+        flex-direction: row;
+        gap: 30px;
     }
 }
 
