--- a/sass/components/_index-hero.scss
+++ b/sass/components/_index-hero.scss
@@ -12,11 +12,16 @@
     margin: 0 auto;
 
     @media screen and (min-width: 768px) {
-        width: 768px;
         background-image: linear-gradient(rgba(47, 48, 58, 0.4),
                 rgba(47, 48, 58, 0.4)),
             url(../img/Tablet/header-tablet-bg.jpg),
             url(../img/Tablet/header-tablet-bg-2x.jpg);
+    }
+    @media screen and (min-width: 1200px) {
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+                rgba(47, 48, 58, 0.4)),
+            url(../img/Desktop/header-desktop-bg.jpg),
+            url(../img/Desktop/header-desktop-bg-2x.jpg);
     }
 }
 
@@ -26,7 +31,12 @@
     flex-direction: column;
     padding: 118px 60px;
     @media screen and (min-width: 768px) {
+        width: 768px;
         padding: 118px 204px;
+    }
+    @media screen and (min-width: 1200px) {
+        width: 1200px;
+        padding: 200px 252px;
     }
 }
 
@@ -39,6 +49,10 @@
     text-align: center;
     color: #ffffff;
     margin-bottom: 30px;
+    @media screen and (min-width: 1200px) {
+        font-size: 44px;
+        line-height: 1.36;
+    }
 }
 
 .hero-container__btn {
