--- a/sass/components/_index-peculiarities.scss
+++ b/sass/components/_index-peculiarities.scss
@@ -4,6 +4,9 @@
 
 .container-peculiarities {
     padding: var(--padding-section);
+    @media screen and (min-width: 1200px) {
+        padding: var(--padding-section-desktop);
+    }
 }
 
 .peculiarities__list {
@@ -15,6 +18,9 @@
             }
         @media screen and (min-width: 768px) {
             width: 354px;
+        }
+        @media screen and (min-width: 1200px) {
+            width: 270px;
         }
     }
     @media screen and (min-width: 768px) {
