--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -10,12 +10,12 @@
     @media screen and (min-width: 768px) {
         padding: 207px 159px;
     }
+    @media screen and (min-width: 1200px) {
+        padding: 0;
+    }
 }
 
 .modal {
-    // position: absolute;
-    // top: 50%;
-    // left: 50%;
     width: 100%;
     height: 609px;
     padding: 8px;
@@ -23,14 +23,23 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-    // transform: translate(-50%, -50%) scale(1);
     transform: translate(0, 0) scale(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    @media screen and (min-width: 1200px) {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(1);
+        width: 528px;
+        height: 581px;
+    }
 }
 
 .modal-backdrop.is-hidden .modal {
-    // transform: translate(-50%, -50%) scale(0);
     transform: translate(0, 0) scale(0);
+    @media screen and (min-width: 1200px) {
+        transform: translate(-50%, -50%) scale(0);
+    }
 }
 
 .modal__close-btn {
@@ -52,6 +61,7 @@
     &:focus {
             fill: var(--logo-focus-hover-color);
         }
+    
 }
 
 
