--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -5,6 +5,7 @@
     --main-font-family: "roboto", sans-serif;
     --title-logo-font-weight: 700;
     --padding-section: 60px 15px;
+    --padding-section-desktop: 94px 15px;
     --animation-hover-text: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     --animation-hover-bg: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
