--- a/sass/components/_header-nav-contact.scss
+++ b/sass/components/_header-nav-contact.scss
@@ -51,6 +51,7 @@
     transition: var(--animation-hover-focus);
     @media screen and (min-width: 768px) {
         display: flex;
+        gap: 8px;
     }
     @media screen and (min-width: 1200px) {
         align-items: center;
