--- a/sass/components/_portfolio-filter.scss
+++ b/sass/components/_portfolio-filter.scss
@@ -1,6 +1,7 @@
 .portfolio-hero {
-    padding-top: var(--distance-top-bottom-section);
-    padding-bottom: var(--distance-top-bottom-section);
+    .container-portfolio {
+            padding: var(--padding-section-desktop);
+        }
 }
 
 .filter {
